load and draw a sprite

--- a/render/Makefile
+++ b/render/Makefile
@@ -1,12 +1,14 @@
 CC = gcc
 CFLAGS = -Wall -O2 -fPIC
+LDFLAGS = -lm
 OBJDIR = .
 
 TARGET = $(OBJDIR)/render.so
 
 OBJS =	$(OBJDIR)/bswap.o \
 	$(OBJDIR)/vec.o \
-	$(OBJDIR)/r_main.o
+	$(OBJDIR)/r_main.o \
+	$(OBJDIR)/r_sprite.o
 
 all: $(TARGET)
 
@@ -15,7 +17,7 @@ clean:
 	rm -f $(TARGET)
 
 $(TARGET): $(OBJS)
-	$(CC) -shared $(OBJS) -o $(TARGET)
+	$(CC) -shared $(OBJS) -o $(TARGET) $(LDFLAGS)
 
 ########################################################################
 
@@ -24,4 +26,6 @@ $(OBJDIR)/bswap.o: bswap.c
 $(OBJDIR)/vec.o: vec.c
 	$(CC) -c $(CFLAGS) $? -o $@
 $(OBJDIR)/r_main.o: r_main.c
+	$(CC) -c $(CFLAGS) $? -o $@
+$(OBJDIR)/r_sprite.o: r_sprite.c
 	$(CC) -c $(CFLAGS) $? -o $@
