beginning poly span handling some cleanups figured out proper projecting and poly rasterizing needs

--- a/render/Makefile
+++ b/render/Makefile
@@ -8,7 +8,9 @@ TARGET = $(OBJDIR)/render.so
 OBJS =	$(OBJDIR)/bswap.o \
 	$(OBJDIR)/vec.o \
 	$(OBJDIR)/r_main.o \
-	$(OBJDIR)/r_sprite.o
+	$(OBJDIR)/r_misc.o \
+	$(OBJDIR)/r_sprite.o \
+	$(OBJDIR)/r_span.o
 
 all: $(TARGET)
 
@@ -27,5 +29,9 @@ $(OBJDIR)/vec.o: vec.c
 	$(CC) -c $(CFLAGS) $? -o $@
 $(OBJDIR)/r_main.o: r_main.c
 	$(CC) -c $(CFLAGS) $? -o $@
+$(OBJDIR)/r_misc.o: r_misc.c
+	$(CC) -c $(CFLAGS) $? -o $@
 $(OBJDIR)/r_sprite.o: r_sprite.c
+	$(CC) -c $(CFLAGS) $? -o $@
+$(OBJDIR)/r_span.o: r_span.c
 	$(CC) -c $(CFLAGS) $? -o $@
