use better key names

--- a/render/Makefile
+++ b/render/Makefile
@@ -8,9 +8,9 @@ TARGET = $(OBJDIR)/render.so
 OBJS =	$(OBJDIR)/bswap.o \
 	$(OBJDIR)/vec.o \
 	$(OBJDIR)/r_main.o \
-	$(OBJDIR)/r_misc.o
+	$(OBJDIR)/r_misc.o \
+ 	$(OBJDIR)/r_span.o
 #	$(OBJDIR)/r_sprite.o \
-#	$(OBJDIR)/r_span.o \
 #	$(OBJDIR)/r_edge.o
 
 all: $(TARGET)
